added console test app

--- a/base64lib/base64lib.vcproj
+++ b/base64lib/base64lib.vcproj
@@ -348,6 +348,10 @@
 			RelativePath=".\COPYRIGHT"
 			>
 		</File>
+		<File
+			RelativePath=".\readme.txt"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
